--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,15 @@ services:
     ports:
       - 5432:5342
 
+  datadog:
+    image: gcr.io/datadoghq/agent:latest
+    environment:
+     - DD_API_KEY=${DD_API_KEY}
+     - DD_SITE=datadoghq.com
+    volumes:
+     - /var/run/docker.sock:/var/run/docker.sock
+     - /proc/:/host/proc/:ro
+     - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
+
 volumes:
   postgres:
